--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  --background-color: #333;
 }
 
 .topnav a {
   float: right;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 24px 16px;
   text-decoration: none;
   font-size: 17px;
 }
