styling menu bar

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@ body {
 
 .topnav a {
   float: right;
-  color: #f2f2f2;
+  color: #b8a01a;
   text-align: center;
-  padding: 24px 36px;
+  padding: 14px 36px;
   text-decoration: none;
   font-size: 17px;
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #000;
+  color: whitesmoke;
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #000;
   color: white;
 }
 </style>
