--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
   float: right;
   color: #b8a01a;
   text-align: center;
-  padding: 14px 36px;
+  padding: 14px 72px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -29,7 +29,7 @@ body {
 
 .topnav a.active {
   background-color: #000;
-  color: white;
+  color: whitesmoke;
 }
 </style>
 </head>
