--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Garamond, "Palatino Linotype", sans-serif;
 }
 
 .topnav {
