added new pages and styling

--- a/about.html
+++ b/about.html
@@ -15,13 +15,7 @@
 </div>
 </div>
 
-
-
-<div style="padding-left:16px">
-  <h2>Is this thing on?</h2>
-  <center><img src="selfie.jpg" alt="Dez b&w" width="200" height="300" border="3" class="border"></center>
-  <p>Testing to see if I still have it..</p>
-</div>
-
+<h1>About Page</h1>
+<p>Placehoder</p>
 </body>
 </html>
