--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@
 <body>
 <div class="menubackground">
 <div class="topnav">
-  <a href="#home">Contact</a>
-  <a href="#news">Resume</a>
-  <a href="#contact">About</a>
-  <a href="#about">Home</a>
+  <a href="contact.html">Contact</a>
+  <a href="resume.html">Resume</a>
+  <a href="about.html">About</a>
+  <a href="index.html">Home</a>
 </div>
 </div>
 
