--- a/about.html
+++ b/about.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="site_styling.css">
+<link rel="stylesheet" type="text/css" href="css/site_styling.css">
 <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="menubackground">
+    <div class="logo">
+        <img style= "border: 3px solid #b8a01a" src="images/logo2.png" alt="Logo" width="450" height="235">
+    </div>
 <div class="topnav">
   <a href="contact.html">Contact</a>
   <a href="resume.html">Resume</a>
@@ -15,7 +18,9 @@
 </div>
 </div>
 
-<h1>About Page</h1>
-<p>Placehoder</p>
+<div class="body_style">
+    <h1>About Page</h1>
+        <p>Placehoder</p>
+</div>
 </body>
 </html>
