--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="site_styling.css">
+<link rel="stylesheet" type="text/css" href="css/site_styling.css">
 <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="menubackground">
+    <div class="logo">
+      <img style= "border: 3px solid #b8a01a" src="images/logo2.png" alt="Logo" width="450" height="235">
+    </div>
 <div class="topnav">
-  <a href="contact.html">Contact</a>
-  <a href="resume.html">Resume</a>
-  <a href="about.html">About</a>
-  <a href="index.html">Home</a>
+      <a href="contact.html">Contact</a>
+      <a href="resume.html">Resume</a>
+      <a href="about.html">About</a>
+      <a href="index.html">Home</a>
 </div>
 </div>
 
+<div class="body_style">
   <h2>Is this thing on?</h2>
-  <center><img src="selfie.jpg" alt="Dez b&w" width="200" height="300" border="3" class="border"></center>
-  <p>Testing to see if I still have it..</p>
+    <center><img style= "border: 3px inset #b8a01a" src="images/selfie.jpg" alt="Dez b&w" width="200" height="300"></center>
+      <p>Testing to see if I still have it..</p>
+</div>
 
 
 </body>
