--- a/about.html
+++ b/about.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/site_styling.css">
-<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-</head>
-<body>
-<div class="menubackground">
-    <div class="logo">
-        <img style= "border: 3px solid #b8a01a" src="images/logo2.png" alt="Logo" width="450" height="235">
-    </div>
-<div class="topnav">
-  <a href="contact.html">Contact</a>
-  <a href="resume.html">Resume</a>
-  <a href="about.html">About</a>
-  <a href="index.html">Home</a>
-</div>
-</div>
 
-<div class="body_style">
-    <h1>About Page</h1>
-        <p>Placehoder</p>
-</div>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Learn About Desmond</title>
+    <link rel="stylesheet" type="text/css" href="css/site_styling.css">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <div class="menubackground">
+        <div class="topnav">
+            <a href="https://www.linkedin.com/in/desmondspringer1/"><i class="fa fa-linkedin-square" style="font-size:20px;"></i></a>
+            <a href="contact.html">Contact</a>
+            <a href="resume.html">Resume</a>
+            <a href="about.html">About</a>
+            <a href="index.html">Home</a>
+        </div>
+    </div>
+
+    <div class="body_style">
+        <h1>About Page</h1>
+        
+        </br>
+        
+        <h2>Placehoder</h2>
+    </div>
 </body>
+
 </html>
