--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,7 @@
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
+        <a href="https://github.com/dspringer15">GitHub</a>
         <a href="https://www.linkedin.com/in/desmondspringer1/">LinkedIn</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
@@ -31,7 +32,7 @@
 
         </br>
 
-        <p>My resume in PDF format can be viewed in the box below by clicking <a href="docs/_2019_.pdf" target="dez_resume">here</a>.</p>
+        <p>My resume in PDF format can be viewed in the box below by clicking <a href="docs/2020.docx" target="dez_resume">here</a>.</p>
 
         </br>
 
