--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Desmond Springer</title>
+  <title>Desmond Springer's E-Portfolio</title>
   <link rel="stylesheet" type="text/css" href="css/site_styling.css">
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,6 +16,7 @@
       <a href="about.html">About</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
+      <a href="https://github.com/dspringer15">GitHub</a>
       <a href="https://www.linkedin.com/in/desmondspringer1/">LinkedIn</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -40,7 +41,7 @@
     <div class="message_styling">
       <p>I am glad you've taken the time to check out my evolving E-Portfolio. I'm a growing I.T. professional with a
       background in development, operations and analysis. I'm looking to continue to attain new skills and strengthen
-      my current ones; I'm sure this will be fun because I'm ready to grow and "develop" &#128517;
+      my current ones; I'm sure this will be fun because I'm ready to grow and "develop". &#128517;
       </p>
     </div>
   </div>
