--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,3 @@
-<?php 
-if(isset ($_POST['submit'])){
-    $inquiry = $_POST['inquiry'];
-    $email = $_POST['email'];
-    $to = 'dspringer08@yahoo.com';
-    $fullname = $_POST['fullname'];
-    $number = $_POST['number'];
-    $subject = "You have a new email from your E-Portfolio";
-    $message = $_POST['message'];
-    $file = $_POST['attachedFile'];
-    $body = '<html>
-                <body>
-                    <h3>You have a new '.$inquiry.' from '.$fullname.' </h3>
-                    <p>Email: '.$email.'</p>
-                    <p>Name: '.$fullname.'</p>
-                    <p>Number: '.$number.'</p>
-                    <p>Message: '.$message.'</p>
-                    <p>They also sent the attached file: '.$file.'</p>
-                </body>
-            </html>'; 
-
-
-    $headers = "From: " .$name. " <".$email.">\r\n";
-    $headers .= "Reply-To:  ".$email."\r\n";
-    $headers .= "MIME-Version: 1.0\r\n";
-    $headers .= "Content-type: text/html; charset-utf-8";
-    $send = mail($to,$subject,$body,$headers);
-    echo "Mail Sent. Thank you " . $first_name . ", we will contact you shortly.";
-    }
-?>
-
 <!DOCTYPE html>
 <html>
 
@@ -65,7 +34,7 @@ if(isset ($_POST['submit'])){
         </br>
 
         <div class="contact_form">
-            <form name="contactForm" action="" onsubmit="return validateForm()" method="post">
+            <form name="contactForm" action="emailForm.php" onsubmit="return validateForm()" method="post">
 
                 <label for="inquiry_type">Inquiry Type: <span class = "red">*</span></label>
                 <select id="inquiry_type" name="inquiry">
