changed resume format

--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
 
         </br>
 
-        <p>My resume in PDF format can be viewed in the box below by clicking <a href="docs/2020.docx" target="dez_resume">here</a>.</p>
+        <p>My resume in PDF format can be viewed in the box below by clicking <a href="docs/2020PDF.pdf" target="dez_resume">here</a>.</p>
 
         </br>
 
